welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:3: error: '<-' expected but ')' found.
	for (cote <=1 to 4){
                          ^MethodsDogHouse:8: error: illegal start of simple expression
}
^